fix shortcut context menu option gap

--- a/styles/persistent/_shortcuts.scss
+++ b/styles/persistent/_shortcuts.scss
@@ -309,6 +309,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            gap: 0.2em;
         }
 
         .title {
